--- a/css/main_style.css
+++ b/css/main_style.css
@@ -301,11 +301,25 @@ body{
 /*banner*/
 #slide {
     width: 100%;
-    height: 860px;
     margin: 0 auto;
     overflow: hidden;
 }
-
+#banner .swiper-slide {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+#banner .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+#banner .swiper {
+    margin-left: auto;
+    margin-right: auto;
+  }
 #slide .swiper {
     width: 100%;
     height: 100%;
