--- a/css/sub1_style.css
+++ b/css/sub1_style.css
@@ -60,19 +60,19 @@ body{
 .gnb li{
     float: left;
     margin-top: 100px;
-}
-.gnb li img{
-    width: 80%;
+    width: 15%;
+    text-align: center;
 }
 .gnb li a{
     display: block;
     color: #5a755f;
     font-size: 18px;
     font-weight: bold;
-    padding: 0 60px;
+    padding-bottom: 37px;
 }
 .gnb li:nth-child(3) a{
-    margin-top: -50px;
+    margin-top: -80px;
+    padding-bottom: 9px;
 }
 /*submenu*/
 .submenu{
@@ -82,15 +82,17 @@ body{
     width: 100%;
     z-index: 9;
     background-color: rgba(255, 254, 236, 0.5);
+    border-top: 1px solid rgba(149, 179, 150, 0.5);
 }
 .inner_submenu{
     width: 1320px;
     margin: 0 auto;
-    text-align: center;
 }
 .inner_submenu ul{
     float: left;
     width: 15%;
+    height: 150px;
+    text-align: center;
 }
 .ul_1{
     margin-left: 165px;
@@ -101,7 +103,7 @@ body{
 .submenu li a{
     display: block;
     color: #5a755f;
-    padding: 10px 26px;
+    padding: 10px 0px;
 }
 .submenu li a:hover{
     color: #ffdd6e;
